# echocode-platform

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  repo-generator.ps1  repo-spec.json  requirements.txt
.christina/: repo-profile.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-check.yml  echocodex-dry-run.yml  policy-check.yml
.secrets/: echocode-app.pem
_phase10/: README_PHASE10.txt
_phase10/tools/: extract_phase10.ps1  push_phase10.ps1
artifacts/: sample_evidence_bundle.json  sample_traceability.json
artifacts/evidence/: WI-0067F782.json  WI-03AC2145.json  WI-0F798532.json  WI-11E78E26.json  WI-135A9DDF.json  WI-24291E1A.json  WI-2B141962.json  WI-2E1FFC30.json  WI-3A28CF24.json  WI-487E1A10.json  WI-4919A6D8.json  WI-4D6D428A.json  WI-55F3DDF1.json  WI-56905C93.json  WI-57CABD7D.json  WI-5D87C2E6.json  WI-61D11B9A.json  WI-66A9DD9A.json  WI-68281F36.json  WI-6C705DEB.json  WI-7120FF41.json  WI-7B14471B.json  WI-7C16F345.json  WI-7D13D81D.json  WI-82F5F262.json  WI-934C6A5B.json  WI-985B46F7.json  WI-98609F59.json  WI-A3A8760C.json  WI-AEC2D80B.json  WI-BD0FBD2F.json  WI-BD3DF003.json  WI-C94BB87B.json  WI-D87C9950.json  (+12 more)
config/: approvals.yaml  echocodex.policy.json  echocodex.runner.json  model-routing.yaml  policy.yaml  settings.yaml
docs/: christina-repo-review.md  project-charter.md  runbook.md  troubleshooting.md
schemas/: evidence-bundle.schema.json  requirement.schema.json  work-item.schema.json
tools/: bootstrap.ps1  ci_validate.py  run-local.ps1  validate.ps1  validate_phase10.ps1
(+119 files in other folders)
