[project]
name = "echocode-platform"
version = "0.1.0"
description = "Multi-agent SDLC platform with GitHub-native traceability and drift prevention"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pytest>=8.2.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "types-PyYAML",
    "types-jsonschema",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
